--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#4CAF50</color>         <!-- Green -->
+    <color name="colorPrimaryVariant">#388E3C</color>  <!-- Darker green -->
+    <color name="colorOnPrimary">#FFFFFF</color>       <!-- Text color on green -->
+
 </resources>
